[gd_scene load_steps=4 format=2]

[ext_resource path="res://pieces/walledge_detector.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 3 )

[node name="walledge_detector" type="Node2D"]
script = ExtResource( 1 )

[node name="wall_detector" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 8
collision_mask = 7

[node name="hitbox" type="CollisionShape2D" parent="wall_detector"]
shape = SubResource( 1 )

[node name="edge_detector" type="Area2D" parent="."]
position = Vector2( 2, 4 )
collision_layer = 8
collision_mask = 4

[node name="hitbox" type="CollisionShape2D" parent="edge_detector"]
shape = SubResource( 2 )

[connection signal="body_entered" from="wall_detector" to="." method="_on_wall_detector_body_entered"]
[connection signal="body_exited" from="wall_detector" to="." method="_on_wall_detector_body_exited"]
[connection signal="body_entered" from="edge_detector" to="." method="_on_edge_detector_body_entered"]
[connection signal="body_exited" from="edge_detector" to="." method="_on_edge_detector_body_exited"]
